# LLM_betty_betterware

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: server.py
data/: chroma.sqlite3
docs/: Ofertas.xlsx
terraform/phases/dev/: discovery.tf  main.tf  output.tf
