[tool.poetry]
name = "betty-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
langchain-community = "^0.0.20"
pypdf = "^4.0.1"
pydantic = "1.10.13"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
